Verif/Test/Invalide/test_erreur_3.71-30.deca
// Description:
//    Programme soulevant l'erreur (3.71)
// Resultats:
//    Erreur contextuelle
//    Ligne 14 : Les types 'boolean' et 'boolean' sont incompatibles avec l'opérateur binaire '-' (règle 3.71)
//
// Attributs: exec correct automatique
//
// Historique:
//    cree le 14/01/2012

float var;
{
   var = true - true;
}